--- a/__site/concord/index.html
+++ b/__site/concord/index.html
@@ -541,9 +541,59 @@
 
 <div class="marginnote">Sources: <a href="https://www.bls.gov/mxp/publications/regional-publications/charts/new-england-top-6-exports.htm">Top regional exports</a> <a href="https://www.bls.gov/mxp/publications/regional-publications/new-england-exports.htm">Regional exports</a> <a href="https://www.maine.gov/decd/sites/maine.gov.decd/files/inline-files/Final&#37;20Report&#37;20-&#37;202024&#37;20Annual&#37;20Macro&#37;20Update&#37;20-&#37;20Maine&#37;20DECD.pdf">Maine trade balances</a> <a href="https://donahue.umass.edu/documents/Treasury_SocioEconomic_Report_Summer2023_Final.pdf">Massachusetts</a></div>
 <p>Domestically, Maine has a &#36;79.3 billion trade surplus with other U.S. states, driven by forest products and seafood exports. Massachusetts and Connecticut leverage their tech and aerospace sectors for positive domestic balances of &#36;12.9 billion and &#36;3.8 billion respectively. New Hampshire and Vermont also maintain modest domestic surpluses, while Rhode Island is the only state with a negative balance in both international and domestic trade.</p>
+<h3 id="productivity"><a href="#productivity" class="header-anchor">Productivity</a></h3>
+<p>Concordia leads the nation in gross domestic product per capita. 
+<table class="tufte-table">
+  <thead>
+    <tr class="tufte-table tr header headerLastRow">
+      <th style = "text-align: left;">Nation</th>
+      <th style = "text-align: right;">GDP per capita</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr style="font-weight: bold;" class="tufte-table tr odd-row"><td style = "text-align: left;">Concordia</td>
+      <td style = "text-align: right;">96,468</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Cumberland</td>
+      <td style = "text-align: right;">54,787</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Deseret</td>
+      <td style = "text-align: right;">67,296</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">New Dixie</td>
+      <td style = "text-align: right;">57,234</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Factoria</td>
+      <td style = "text-align: right;">61,418</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Heartlandia</td>
+      <td style = "text-align: right;">64,092</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">The Lone Star Republic</td>
+      <td style = "text-align: right;">65,024</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Metropolis</td>
+      <td style = "text-align: right;">77,874</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Pacifica</td>
+      <td style = "text-align: right;">78,226</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">New Sonora</td>
+      <td style = "text-align: right;">76,481</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">United States</td>
+      <td style = "text-align: right;">68,194</td>
+    </tr>
+  </tbody>
+</table>
+	 
+</p>
 <h2 id="political_polarization"><a href="#political_polarization" class="header-anchor">Political polarization</a></h2>
 <div class="marginnote">Source: <a href="https://tonmcg.github.io/US_County_Level_Election_Results_08-24/">United States General Election Presidential Results by District, Ward, or County from 2008 to 2024</a></div>
 <p>Replicating the same unstable political dichotomy of the past decade is to be avoided. Taking the 2024 presidential vote as a proxy for political values, each nation should have a clear majority. </p>
+<p>
+<p>Politcal polarization of Concordia, as measured by the margin between votes for the two major party political nominees, was 18.42% in the 2024 election. Politcal polarization of Concordia, as measured by the margin between votes for the two major party political nominees, was 11.27% over the elections from 1968-2020.</p>	 
+ Even should the recent marked difference between the two parties should revert to the long-term mean, there appears to be a stable political majority for Concordia.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
 <p>Assuming that US markets remain open to Concordia, it would be a viable standalone nation if it continues to absorb foreign immigration and can meet challenges in housing costs.</p>
 <div class="page-foot">
@@ -551,7 +601,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 12, 2025.
+     Richard Careaga. Last modified: March 13, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
