--- a/__site/desert/index.html
+++ b/__site/desert/index.html
@@ -453,13 +453,66 @@
 <p>Montana holds about 30&#37; of U.S. recoverable coal reserves and is a major coal producer from surface mines in the Powder River Basin. Crude oil production mainly occurs in the Bakken Formation in northeastern Montana; refineries process crude oil into various products like gasoline and aviation fuel. Natural gas storage capacity is substantial; Montana houses the largest single underground storage site in the U.S.</p>
 <p>The Coeur d&#39;Alene District of Idaho has produced over a billion ounces of silver since 1884. Southeastern Idaho hosts large open-pit phosphate mines used for fertilizer production.</p>
 <p>Wyoming leads the nation in coal production with large-scale surface mining operations in the Powder River Basin. It accounts for nearly two-fifths of all U.S. coal mined annually. Wyoming produces crude oil and natural gas and also has vast oil shale reserves. Wyoming contains one-third of U.S. uranium reserves. Wyoming has significant deposits critical for electric vehicle batteries and renewable energy technologies.</p>
+<h3 id="productivity"><a href="#productivity" class="header-anchor">Productivity</a></h3>
+<p>Deseret is slightly below the rest of the U.S. in gross domestic product per capita. 
+<table class="tufte-table">
+  <thead>
+    <tr class="tufte-table tr header headerLastRow">
+      <th style = "text-align: left;">Nation</th>
+      <th style = "text-align: right;">GDP per capita</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Concordia</td>
+      <td style = "text-align: right;">96,468</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Cumberland</td>
+      <td style = "text-align: right;">54,787</td>
+    </tr>
+    <tr style="font-weight: bold;" class="tufte-table tr odd-row"><td style = "text-align: left;">Deseret</td>
+      <td style = "text-align: right;">67,296</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">New Dixie</td>
+      <td style = "text-align: right;">57,234</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Factoria</td>
+      <td style = "text-align: right;">61,418</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Heartlandia</td>
+      <td style = "text-align: right;">64,092</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">The Lone Star Republic</td>
+      <td style = "text-align: right;">65,024</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Metropolis</td>
+      <td style = "text-align: right;">77,874</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Pacifica</td>
+      <td style = "text-align: right;">78,226</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">New Sonora</td>
+      <td style = "text-align: right;">76,481</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">United States</td>
+      <td style = "text-align: right;">68,194</td>
+    </tr>
+  </tbody>
+</table>
+	 
+</p>
+<h2 id="political_polarization"><a href="#political_polarization" class="header-anchor">Political polarization</a></h2>
+<div class="marginnote">Source: <a href="https://tonmcg.github.io/US_County_Level_Election_Results_08-24/">United States General Election Presidential Results by District, Ward, or County from 2008 to 2024</a></div>
+<p>Replicating the same unstable political dichotomy of the past decade is to be avoided. Taking the 2024 presidential vote as a proxy for political values, each nation should have a clear majority. </p>
+<p>
+<p>Politcal polarization of Deseret, as measured by the margin between votes for the two major party political nominees, was 8.67% in the 2024 election. Politcal polarization of Deseret, as measured by the margin between votes for the two major party political nominees, was 22.75% over the elections from 1968-2020.</p>	 
+ Even should the recent marked difference between the two parties should revert to the long-term mean, there may be a stable political majority for Deseret.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 11, 2025.
+     Richard Careaga. Last modified: March 13, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
