--- a/__site/factor/index.html
+++ b/__site/factor/index.html
@@ -470,6 +470,60 @@
 <p>Illinois and Indiana produce coal and Ohio produces natural gas.</p>
 <h3 id="services"><a href="#services" class="header-anchor">Services</a></h3>
 <p>In 2022, Illinois exported &#36;43 billion in services, with digitally tradable services accounting for &#36;28 billion. Key sectors include financial services, insurance services, and telecom, computer, and information services. Michigan&#39;s services exports totaled &#36;14 billion in 2022, with digitally tradable services at &#36;7.8 billion. Key sectors include financial services, insurance services, and telecom, computer, and information services. In 2022, Indiana exported nearly &#36;8 billion in services, with digitally tradable services at &#36;6.6 billion. Key sectors include financial services, insurance services, and telecom, computer, and information services.  Ohio exported &#36;23 billion in services in 2022, with digitally tradable services at &#36;15 billion. Key sectors include financial services, insurance services, and telecom, computer, and information services. Wisconsin exported &#36;8.4 billion in services in 2023.</p>
+<h3 id="productivity"><a href="#productivity" class="header-anchor">Productivity</a></h3>
+<p>Trails the nation in gross domestic product per capita; it is the third lowest. 
+<table class="tufte-table">
+  <thead>
+    <tr class="tufte-table tr header headerLastRow">
+      <th style = "text-align: left;">Nation</th>
+      <th style = "text-align: right;">GDP per capita</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Concordia</td>
+      <td style = "text-align: right;">96,468</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Cumberland</td>
+      <td style = "text-align: right;">54,787</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Deseret</td>
+      <td style = "text-align: right;">67,296</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">New Dixie</td>
+      <td style = "text-align: right;">57,234</td>
+    </tr>
+    <tr style="font-weight: bold;" class="tufte-table tr odd-row"><td style = "text-align: left;">Factoria</td>
+      <td style = "text-align: right;">61,418</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Heartlandia</td>
+      <td style = "text-align: right;">64,092</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">The Lone Star Republic</td>
+      <td style = "text-align: right;">65,024</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Metropolis</td>
+      <td style = "text-align: right;">77,874</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Pacifica</td>
+      <td style = "text-align: right;">78,226</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">New Sonora</td>
+      <td style = "text-align: right;">76,481</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">United States</td>
+      <td style = "text-align: right;">68,194</td>
+    </tr>
+  </tbody>
+</table>
+	 
+</p>
+<h2 id="political_polarization"><a href="#political_polarization" class="header-anchor">Political polarization</a></h2>
+<div class="marginnote">Source: <a href="https://tonmcg.github.io/US_County_Level_Election_Results_08-24/">United States General Election Presidential Results by District, Ward, or County from 2008 to 2024</a></div>
+<p>Replicating the same unstable political dichotomy of the past decade is to be avoided. Taking the 2024 presidential vote as a proxy for political values, each nation should have a clear majority. </p>
+
+<p>Politcal polarization of Factoria, as measured by the margin between votes for the two major party political nominees, was 2.73% in the 2024 election. Politcal polarization of Factoria, as measured by the margin between votes for the two major party political nominees, was 2.72% over the elections from 1968-2020.</p>	 
+
+<p>Neither the current nor the historical electoral margins hold much promise of political stability.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
 <p></p>
 <div class="page-foot">
@@ -477,7 +531,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 11, 2025.
+     Richard Careaga. Last modified: March 13, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
