--- a/__site/index.html
+++ b/__site/index.html
@@ -45,13 +45,13 @@
 <p>It’s unlikely that the rest of the United States would let its parts go their own ways unless it was part of a general plan of reorganization. If that were to occur many thorny problems, such as defense, currency, inter-regional commerce and the like, would need to be addressed. However, if 37 states agree on amending the Constitution on the fundamental question of allowing for dissolution—a big if—I am assuming those problems away.</p>
 <p>How that will play out will take more years to unfold than I have to observe the changes. What I can do is the thought experiment of taking my toys and going home by looking at what American breakaway republics might look like.</p>
 <p>Here are my initial thoughts. Some states will have counties peeled off to join different nations, but the number and approximate locations will probably not much change.</p>
-<p><img src="img/refound.png" alt="America Refound" /></p>
+<p><img src="img/us_basemap.png" alt="America Refound" /></p>
 <div class="page-foot">
     <a href="http://creativecommons.org/licenses/by-sa/4.0/">
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: February 25, 2025.
+     Richard Careaga. Last modified: March 13, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
