--- a/__site/heart/index.html
+++ b/__site/heart/index.html
@@ -478,12 +478,59 @@
 <p>In 2024, South Dakota exported &#36;2.1 billion of goods to the world. In 2024, South Dakota goods exports were &#36;2.1 billion, In 2024, South Dakota exported &#36;1.9 billion of manufactured products. The state&#39;s largest manufacturing export category is food and kindred products, followed by chemicals, machinery, beverages and tobacco product and transportation equipment.</p>
 <p>In 2024, Nebraska exported &#36;8.2 billion of goods to the world. In 2024, Nebraska exported &#36;6.9 billion of manufactured products. The state&#39;s largest manufacturing export category is food and kindred products, followed by machinery, chemicals, transportation equipment and computer and electronic products.</p>
 <p>In 2024, Kansas exported &#36;14.4 billion of goods to the world. In 2024, Kansas exported &#36;12.6 billion of manufactured products. The state&#39;s largest manufacturing export category is transportation equipment, followed by food and kindred products, computer and electronic products, machinery and chemicals.</p>
-<h3 id="food"><a href="#food" class="header-anchor">Food</a></h3>
-<p>New York has a large dairy industry, and has over a million acres planted in sweet and field corn. Pennsylvania also has a large dairy industry and is the leading producer of mushrooms in the United States. Both New York and Pennsylvania are significant producers of apples. New Jersey is known for producing over 100 types of fruits and vegetables, including blueberries, cranberries, peaches, and tomatoes. The poultry industry, including broilers, turkeys, and eggs, is Virginia&#39;s leading agricultural sector.</p>
-<h3 id="resource_extraction"><a href="#resource_extraction" class="header-anchor">Resource Extraction</a></h3>
-<p>Pennsylvania is a major producer of coal, oil, and natural gas, particularly from the Marcellus shale. Maryland has significant coal mining in its western counties.</p>
-<h3 id="services"><a href="#services" class="header-anchor">Services</a></h3>
-<p>New York is a global hub for financial services, with significant exports in management and advisory services &#40;&#36;25 billion&#41; and other financial services and digitally tradable services.</p>
+<h3 id="productivity"><a href="#productivity" class="header-anchor">Productivity</a></h3>
+<p>Heartlandia trails the nation in gross domestic product per capita by approximately &#36;4,000. 
+<table class="tufte-table">
+  <thead>
+    <tr class="tufte-table tr header headerLastRow">
+      <th style = "text-align: left;">Nation</th>
+      <th style = "text-align: right;">GDP per capita</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Concordia</td>
+      <td style = "text-align: right;">96,468</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Cumberland</td>
+      <td style = "text-align: right;">54,787</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Deseret</td>
+      <td style = "text-align: right;">67,296</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">New Dixie</td>
+      <td style = "text-align: right;">57,234</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Factoria</td>
+      <td style = "text-align: right;">61,418</td>
+    </tr>
+    <tr style="font-weight: bold;" class="tufte-table tr"><td style = "text-align: left;">Heartlandia</td>
+      <td style = "text-align: right;">64,092</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">The Lone Star Republic</td>
+      <td style = "text-align: right;">65,024</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">Metropolis</td>
+      <td style = "text-align: right;">77,874</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">Pacifica</td>
+      <td style = "text-align: right;">78,226</td>
+    </tr>
+    <tr class="tufte-table tr"><td style = "text-align: left;">New Sonora</td>
+      <td style = "text-align: right;">76,481</td>
+    </tr>
+    <tr class="tufte-table tr odd-row"><td style = "text-align: left;">United States</td>
+      <td style = "text-align: right;">68,194</td>
+    </tr>
+  </tbody>
+</table>
+	 
+</p>
+<h2 id="political_polarization"><a href="#political_polarization" class="header-anchor">Political polarization</a></h2>
+<div class="marginnote">Source: <a href="https://tonmcg.github.io/US_County_Level_Election_Results_08-24/">United States General Election Presidential Results by District, Ward, or County from 2008 to 2024</a></div>
+<p>Replicating the same unstable political dichotomy of the past decade is to be avoided. Taking the 2024 presidential vote as a proxy for political values, each nation should have a clear majority. </p>
+<p>
+<p>Politcal polarization of Heartlandia, as measured by the margin between votes for the two major party political nominees, was 12.07% in the 2024 election. Politcal polarization of Heartlandia, as measured by the margin between votes for the two major party political nominees, was 10.2% over the elections from 1968-2020.</p>	 
+ There appears to be a stable political majority for Hearlandia.</p>
 <h2 id="assessment"><a href="#assessment" class="header-anchor">Assessment</a></h2>
 <p></p>
 <div class="page-foot">
@@ -491,7 +538,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/CC_BY-SA_icon.svg"  
             style="width:44px;height:15px;">
     </a>
-     Richard Careaga. Last modified: March 12, 2025.
+     Richard Careaga. Last modified: March 13, 2025.
     Website built with <a href="https://github.com/tlienart/Franklin.jl">Franklin.jl</a> and the <a href="https://julialang.org">Julia programming language</a>.
 </div>
 </div><!-- CONTENT ENDS HERE -->
